<resources>
    <string name="app_name">Westside</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="services">Services</string>
    <string name="events">Events</string>
    <string name="announcements">Announcements</string>
    <string name="prayers">Prayers</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="westside_logo">westside logo</string>
    <string name="something_went_wrong">Oops, somthing went wrong</string>
    <string name="long_sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="create_account">Create Account</string>
    <string name="email_validation_error">Enter a valid email address</string>
    <string name="password_validation_string">Must be at least 6 characters</string>
    <string name="server_down">Westside server is down</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_password_validation_error">Passwords do not match</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_am_a_subscriberr">I am a Subscriberr</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_event">Add Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="join_event">Join Event</string>
    <string name="ministries">Ministries</string>
    <string name="members">Members</string>
    <string name="leave_ministry">Leave Ministry</string>
    <string name="join_ministry">Join Ministry</string>
    <string name="my_events">My Events</string>
</resources>
