<layout>
    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The main content view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/view_toolbar"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:tabGravity="center"
                app:tabMinWidth="120dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/colorOffWhite"
                app:tabTextColor="@color/colorGrey">

                <android.support.design.widget.TabItem
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/services"/>

                <android.support.design.widget.TabItem
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/events"/>

                <android.support.design.widget.TabItem
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/announcements"/>

                <android.support.design.widget.TabItem
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prayers"/>

            </android.support.design.widget.TabLayout>
            <!-- The navigation drawer -->
            <android.support.v4.view.ViewPager
                android:id="@+id/tabbedViewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorOffWhite"
            android:fitsSystemWindows="true"/>
    </android.support.v4.widget.DrawerLayout>
</layout>
