<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.digicraft.westside.ui.account.CreateAccountViewModel"/>
    </data>

    <LinearLayout
        android:onClick="@{vm::onClickOutsideInput}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/colorGrey">

            <EditText
                android:text="@={vm.phoneNumber}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textWatcher="@{vm.phoneFormatter}"
                android:maxLength="14"
                android:digits="1234567890()+ -"
                android:inputType="phone"
                android:hint="@string/phone_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="@={vm.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:validator="@{vm.emailValidator}"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="@={vm.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:validator="@{vm.passwordValidator}"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:validator="@{vm.confirmPasswordValidator}"
                android:hint="@string/confirm_password"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorOffWhite"
                android:text="@string/i_am_a_subscriberr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <android.support.v4.widget.Space
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <CheckBox
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:textColor="@color/indianRed"
            android:text="@{vm.errorText}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>